# streamlit-pivot-table

./: .gitignore  .pre-commit-config.yaml  NOTICES  README.md  SKILL.md  load_test_app.py  pyproject.toml  streamlit_app.py  streamlit_layout_demo.py
.github/: repo_meta.yaml
streamlit_pivot/: __init__.py  pyproject.toml
streamlit_pivot/frontend/: .gitignore  bench-baseline.json  package-lock.json  package.json  vite.config.ts  vitest.config.ts
streamlit_pivot/frontend/scripts/: bench-memory.mjs  check-bench-regression.mjs
streamlit_pivot/frontend/src/: PivotRoot.test.tsx  PivotRoot.tsx  index.tsx  vite-env.d.ts
streamlit_pivot/frontend/src/config/: DndFieldChip.tsx  FilterBar.module.css  FilterBar.tsx  SettingsPanel.module.css  SettingsPanel.tsx  Toolbar.module.css  Toolbar.test.tsx  Toolbar.tsx
streamlit_pivot/frontend/src/engine/: ArrowDataSource.test.ts  PivotData.bench.ts  PivotData.crossfeature.test.ts  PivotData.drilldown.test.ts  PivotData.golden.test.ts  PivotData.scaled.test.ts  PivotData.showvalues.test.ts  PivotData.temporalHierarchy.test.ts  PivotData.test.ts  PivotData.ts  aggregators.test.ts  aggregators.ts  dataframeFormat.test.ts  dateGrouping.test.ts  dateGrouping.ts  exportData.golden.test.ts  exportData.test.ts  exportData.ts  exportExcel.test.ts  exportExcel.ts  formatters.ts  formulaParser.test.ts  formulaParser.ts  parseArrow.bench.ts  parseArrow.test.ts  parseArrow.ts  perf.test.ts  perf.ts  showValuesAs.renderer.test.ts  showValuesAs.ts  types.test.ts  types.ts
streamlit_pivot/frontend/src/renderers/: ConditionalFormat.test.ts  ConditionalFormat.ts  DrilldownPanel.module.css  DrilldownPanel.test.tsx  DrilldownPanel.tsx  HeaderMenu.module.css  HeaderMenu.test.tsx  HeaderMenu.tsx  TableRenderer.module.css  TableRenderer.test.tsx  TableRenderer.tsx  VirtualizedTableRenderer.test.tsx  VirtualizedTableRenderer.tsx  cellRenderer.test.tsx  cellRenderer.tsx  fieldWidthResolver.test.ts  fieldWidthResolver.ts  styleHelpers.ts  temporalHierarchy.test.ts  temporalHierarchy.ts  useHeaderMenu.ts
streamlit_pivot/frontend/src/renderers/cellRenderers/: CellRenderers.module.css  CheckboxCell.tsx  ImageCell.tsx  LinkCell.tsx  TextCell.tsx  safeUrl.test.ts  safeUrl.ts
streamlit_pivot/frontend/src/shared/: ErrorBoundary.tsx  FilterPickerPopover.tsx  VirtualScroll.test.tsx  VirtualScroll.tsx  WarningBanner.module.css  budgetCheck.test.ts  budgetCheck.ts  useClickOutside.ts  useListboxKeyboard.ts  wideColumn.test.ts
streamlit_pivot/frontend/src/test/: setup.ts
streamlit_pivot_table/: __init__.py  pyproject.toml
streamlit_pivot_table/frontend/: bench-baseline.json  package-lock.json  package.json  vite.config.ts
streamlit_pivot_table/frontend/src/: PivotRoot.tsx  test-utils.ts
streamlit_pivot_table/frontend/src/config/: Toolbar.module.css  Toolbar.test.tsx  Toolbar.tsx
streamlit_pivot_table/frontend/src/engine/: PivotData.bench.ts  PivotData.test.ts  PivotData.ts  aggregators.ts  exportData.test.ts  formatters.test.ts  formatters.ts  parseArrow.ts  perf.test.ts  types.test.ts  types.ts
streamlit_pivot_table/frontend/src/renderers/: ConditionalFormat.test.ts  ConditionalFormat.ts  DrilldownPanel.test.tsx  HeaderMenu.test.tsx  HeaderMenu.tsx  TableRenderer.module.css  TableRenderer.test.tsx  TableRenderer.tsx  VirtualizedTableRenderer.test.tsx  VirtualizedTableRenderer.tsx  useHeaderMenu.ts
streamlit_pivot_table/frontend/src/shared/: ErrorBoundary.tsx  VirtualScroll.test.tsx  WarningBanner.tsx  budgetCheck.ts  useListboxKeyboard.ts
streamlit_pivot_table/frontend/src/test/: setup.ts
(+68 files in other folders)
