# Copyright (c) Snowflake Inc. (2025)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-pivot"
version = "0.1.0"
description = "BI-focused pivot table component for Streamlit"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICES"]
authors = [{ name = "Snowflake Inc", email = "hello@streamlit.io" }]
maintainers = [{ name = "Snowflake Inc", email = "hello@streamlit.io" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["streamlit", "pivot-table", "data", "analytics", "react", "component"]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://streamlit.io"
"Source Code" = "https://github.com/streamlit/streamlit-pivot-table"
"Bug Tracker" = "https://github.com/streamlit/streamlit-pivot-table/issues"
Community = "https://discuss.streamlit.io/"

[project.optional-dependencies]
devel = [
  "wheel",
  "pytest==7.4.0",
  "pytest-cov>=4.1.0",
  "playwright==1.55.0",
  "requests==2.31.0",
  "pytest-playwright-snapshot==1.0",
  "pytest-rerunfailures==12.0",
]
with-streamlit = ["streamlit>=1.51.0"]

[tool.setuptools]
packages = ["streamlit_pivot"]
include-package-data = true

[tool.setuptools.package-data]
streamlit_pivot = ["frontend/build/**/*", "pyproject.toml"]

[tool.setuptools.exclude-package-data]
streamlit_pivot = [
  "frontend/node_modules/**/*",
  "frontend/src/**/*",
  "frontend/package-lock.json",
  "frontend/package.json",
  "frontend/tsconfig.json",
  "frontend/vite.config.ts",
  "frontend/vitest.config.ts",
  "frontend/.gitignore",
]
