# In-package CCv2 manifest, discovered by Streamlit's manifest scanner at
# runtime.  The fully-qualified component registration key is constructed as:
#   "<project.name>.<component.name>"  ->  "streamlit-pivot.streamlit_pivot"
# The Python wrapper must use this exact key in st.components.v2.component().
[project]
name = "streamlit-pivot"
version = "0.1.0"

[[tool.streamlit.component.components]]
name = "streamlit_pivot"
asset_dir = "frontend/build"
